# Fraudes-Financeiras

./: .gitignore  LICENSE  ProjetoFinal_FinalCut.ipynb  ProjetoFinal_prefinalCut.ipynb  README.md  estudo.ipynb  goldTrainsforme.py  main.py  pyproject.toml  teste.ipynb
public/: index.html  script.js  style.css
