[project]
name = "fraudes-financeiras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kagglehub>=0.3.12",
    "lazypredict>=0.2.16",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
